--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,8 @@
+org.gradle.caching=true
+org.gradle.configuration-cache=true
+
 kotlin.code.style=official
+kotlin.mpp.applyDefaultHierarchyTemplate=false
+
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
